Fix nav z-index issue

--- a/less/main.less
+++ b/less/main.less
@@ -44,8 +44,10 @@ p {
 
 // Nav
 .navbar {
-    box-shadow: 2px 2px 4px @lightgray;
+    box-shadow: 2px 2px @lightgray;
     text-align: @center;
+    background-color: white;
+    z-index: 1000000;
     .logo {
         height: 2.5rem;
         
